--- a/service.html
+++ b/service.html
@@ -33,10 +33,9 @@
   <!--  Navbar  -->
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">
-    <span class="navbar-text">
+    <a class="navbar-brand" href="#">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    </span>
+    <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -76,16 +75,44 @@
 </div>
 <!--  END Navbar  -->
 <!--  Content  -->
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-4">
-      One of two columns
-    </div>
-    <div class="col-4">
-      One of two columns
-    </div>
+<div class="container-fluid bg-green">
+  <h1 class="text-center text-white p-5">ご相談の流れ</h1>
+
+</div>
+
+<!--  Flexbox  -->
+<div class="d-flex flex-row bd-highlight justify-content-center">
+  <div class="p-2 bd-highlight bg-primary text-white">
+    <p class="h1 p-3">1</p>
+  </div>
+  <div class="w-50 p-2 bd-highlight bg-success text-white procedure-box">
+    <p class="h4 p-3 bg-warning text-dark">まずはご相談</p>
+    <p class="p-3 bg-info text-white">メール・チャット・電話でご連絡ください。</p>
+
   </div>
 </div>
+
+<!--  Just Line  -->
+<div class="d-flex">
+  <div class="w-50 justline">Width 50%</div>
+</div>
+<!--  End Just Line  -->
+
+<div class="d-flex flex-row bd-highlight justify-content-center">
+  <div class="p-2 bd-highlight bg-primary text-white">
+    <p class="h1 p-3">2</p>
+  </div>
+  <div class="w-50 p-2 bd-highlight bg-success text-white procedure-box">
+    <p class="h4 p-3 mb-2 bg-warning text-dark">お支払い</p>
+    <p class="p-3 bg-info text-white">銀行振込・Paypal・クレジットカードでのお支払いができます。</p>
+  </div>
+</div>
+<!--  Just Line  -->
+<div class="d-flex">
+  <div class="w-50 justline">Width 50%</div>
+</div>
+<!--  End Just Line  -->
+
 
 <!--  Footer  -->
 <div class="container-fluid">
