--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-    <span class="navbar-text">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    </span>
+    <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -78,7 +77,7 @@
 
 <div class="jumbotron bg-green">
 <div class="container">
-  <h1 class="display-4 text-white">弁護士による退職代行</h1>
+  <h1 class="display-4 text-white">弁護士の退職代行</h1>
   <p class=" text-white h2">弁護士　片山ひでのり</p>
   <hr class="my-4">
   <p class="text-white">会社とのやりとりは全て弁護士が引き受けます。あなたが会社と話す必要はありません。</p>
