--- a/map.html
+++ b/map.html
@@ -33,10 +33,9 @@
   <!--  Navbar  -->
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">
-    <span class="navbar-text">
+    <a class="navbar-brand" href="#">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    </span>
+    <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
