--- a/index.html
+++ b/index.html
@@ -44,30 +44,29 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">
+              HOME
+            <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="service.html"> サービス内容 </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html"> 弁護士について </a>
+            <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              運営事務所
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="about.html">弁護士について</a>
+              <a class="dropdown-item" href="map.html">地　図</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="fee.html"> 料　金 </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> お問い合わせ </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">お問い合わせ</a>
-              <a class="dropdown-item" href="#">退職までのステップ</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
           </li>
         </ul>
     </div>
@@ -93,8 +92,8 @@
   <p class="h5 text-center">登録番号：４０４５９</p>
 </div>
 <div class="container-fluid bg-darkolivegreen">
-  <div class="container">
-  <h1 class="text-white pt-4 pb-4">退職代行を弁護士に依頼するメリット</h1>
+  <div class="container bg-green">
+  <h1 class="text-white p-2">退職代行を弁護士に依頼するメリット</h1>
   </div>
 </div>
   <div class="row">
