--- a/map.html
+++ b/map.html
@@ -33,7 +33,7 @@
   <!--  Navbar  -->
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
     <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
     </a>
@@ -49,6 +49,9 @@
           <li class="nav-item">
             <a class="nav-link" href="service.html"> サービス内容 </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link" href="about.html"> 弁護士について </a>
           </li>
@@ -57,6 +60,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> お問い合わせ </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#"> 地　図 </a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -75,6 +81,11 @@
 </div>
 <!--  END Navbar  -->
 <!--  Contents  -->
+
+<div class="container-fluid">
+  <h1 class="text-center text-white bg-green   p-5 border-bottom mb-5">地　図</h1>
+</div>
+
 <!--  Map  -->
     <div class="container google-map mt-3 mb-3">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.454017775437!2d138.3885706152393!3d34.970290780366135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601a49fa675ccc01%3A0x17bd9dfe06953dae!2z54mH5bGx44Gy44Gn44Gu44KK5rOV5b6L5LqL5YuZ5omA!5e0!3m2!1sja!2sjp!4v1532060667069" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
