--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <!--  Navbar  -->
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
     <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
     </a>
@@ -43,11 +43,14 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="service.html"> サービス内容 </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="about.html"> 弁護士について </a>
@@ -57,6 +60,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> お問い合わせ </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="map.html"> 地　図 </a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
