--- a/service.html
+++ b/service.html
@@ -33,7 +33,7 @@
   <!--  Navbar  -->
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
     <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
     </a>
@@ -43,13 +43,16 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="service.html"> サービス内容 </a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
+            <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="about.html"> 弁護士について </a>
           </li>
           <li class="nav-item">
@@ -57,6 +60,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> お問い合わせ </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="map.html"> 地　図 </a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -75,19 +81,19 @@
 </div>
 <!--  END Navbar  -->
 <!--  Content  -->
-<div class="container-fluid bg-green">
-  <h1 class="text-center text-white p-5">ご相談の流れ</h1>
+<div class="container-fluid">
+  <h1 class="text-center text-white bg-teal p-5 border-bottom mb-5">ご相談の流れ</h1>
 
 </div>
 
 <!--  Flexbox  -->
 <div class="d-flex flex-row bd-highlight justify-content-center">
-  <div class="p-2 bd-highlight bg-primary text-white">
-    <p class="h1 p-3">1</p>
+  <div class="p-2 bg-teal text-white">
+    <p class="h1 p-3 text-white">1</p>
   </div>
-  <div class="w-50 p-2 bd-highlight bg-success text-white procedure-box">
-    <p class="h4 p-3 bg-warning text-dark">まずはご相談</p>
-    <p class="p-3 bg-info text-white">メール・チャット・電話でご連絡ください。</p>
+  <div class="w-50 p-2 procedure-box bg-teal">
+    <p class="h4 p-3 bg-yellow text-teal"><strong>相　談</strong></p>
+    <p class="p-3 bg-info text-white">メール・チャット・お電話でご相談ください。手続きの詳細についてもご説明いたします。</p>
 
   </div>
 </div>
@@ -97,13 +103,30 @@
   <div class="w-50 justline">Width 50%</div>
 </div>
 <!--  End Just Line  -->
-
+<!--  Flexbox  -->
 <div class="d-flex flex-row bd-highlight justify-content-center">
-  <div class="p-2 bd-highlight bg-primary text-white">
-    <p class="h1 p-3">2</p>
+  <div class="p-2 bg-teal text-white">
+    <p class="h1 p-3 text-white">2</p>
   </div>
-  <div class="w-50 p-2 bd-highlight bg-success text-white procedure-box">
-    <p class="h4 p-3 mb-2 bg-warning text-dark">お支払い</p>
+  <div class="w-50 p-2 procedure-box bg-teal">
+    <p class="h4 p-3 bg-yellow text-teal"><strong>契　約</strong></p>
+    <p class="p-3 bg-info text-white">ご本人確認のため、免許証等身分証明書の写真を送信してください。契約は、郵送の他、スマホでもできます（クラウドサイン）。</p>
+
+  </div>
+</div>
+
+<!--  Just Line  -->
+<div class="d-flex">
+  <div class="w-50 justline">Width 50%</div>
+</div>
+<!--  End Just Line  -->
+<!--  Flexbox  -->
+<div class="d-flex flex-row bd-highlight justify-content-center">
+  <div class="p-2 bg-teal text-white">
+    <p class="h1 p-3">3</p>
+  </div>
+  <div class="w-50 p-2 text-white procedure-box bg-teal">
+    <p class="h4 p-3 bg-yellow text-teal"><strong>お支払い</strong></p>
     <p class="p-3 bg-info text-white">銀行振込・Paypal・クレジットカードでのお支払いができます。</p>
   </div>
 </div>
@@ -112,6 +135,19 @@
   <div class="w-50 justline">Width 50%</div>
 </div>
 <!--  End Just Line  -->
+<!--  Flexbox  -->
+<div class="d-flex flex-row bd-highlight justify-content-center">
+  <div class="p-2 bg-teal text-white">
+    <p class="h1 p-3 text-white">4</p>
+  </div>
+  <div class="w-50 p-2 procedure-box bg-teal">
+    <p class="h4 p-3 bg-yellow text-teal"><strong>退職代行</strong></p>
+    <p class="p-3 bg-info text-white">弁護士が会社と交渉し、退職の手続きを進めます。あなたが会社とやりとりする必要はありません。</p>
+
+  </div>
+</div>
+
+
 
 
 <!--  Footer  -->
