--- a/fee.html
+++ b/fee.html
@@ -74,19 +74,19 @@
 </div>
 <!--  END Navbar  -->
 <!--  Content  -->
-<div class="container-fluid bg-green">
+<div class="container-fluid bg-teal">
   <h1 class="text-center text-white p-5 mb-5">費　用</h1>
 </div>
 
 <div class="container-fluid bg-gainsboro">
 <div class="container">
   <div class="d-flex justify-content-center">
-    <div class="d-flex flex-column bd-highlight mb-3 fee-box">
-      <div class="p-2 text-center bd-highlight bg-primary text-white">
-        <h2 class="p-2 m-2">基本プラン</h2>
+    <div class="w-75 d-flex flex-column bd-highlight mb-3 fee-box">
+      <div class="p-2 text-center bg-teal text-white">
+        <h2 class="p-2 m-2">退職代行</h2>
       </div>
-      <div class="p-2 text-center bd-highlight bg-danger text-white">60,000円（税別）</div>
-      <div class="p-2 bd-highlight bg-secondary text-white">
+      <div class="p-2 text-center bd-highlight bg-yellow text-teal"><p class="m-auto h5"><strong>６万円（税別）</strong></p></div>
+      <div class="p-2 bd-highlight bg-info text-white">
         <h3 class="h5 p-3">弁護士が下記の交渉を行います。</h3>
         <ul>
           <li>退職手続きの交渉</li>
@@ -100,18 +100,18 @@
 
 <div class="container">
   <div class="d-flex justify-content-center">
-    <div class="d-flex flex-column bd-highlight mb-3 fee-box">
-      <div class="p-2 text-center bd-highlight bg-primary text-white">
-        <h2 class="p-2 m-2">基本プラン</h2>
+    <div class="w-75 d-flex flex-column bd-highlight mb-3 fee-box">
+      <div class="p-2 text-center  bg-teal text-white">
+        <h2 class="h4 p-2 mt-2 ">未払賃金請求</h2>
+        <h2 class="h4">残業代請求</h2>
+        <h2 class="h4">退職金請求</h2>
+        <h2 class="h4">パワハラ慰謝料請求</h2>
       </div>
-      <div class="p-2 text-center bd-highlight bg-danger text-white">60,000円（税別）</div>
-      <div class="p-2 bd-highlight bg-secondary text-white">
-        <h3 class="h5 p-3">弁護士が下記の交渉を行います。</h3>
-        <ul>
-          <li>退職手続きの交渉</li>
-          <li>有給の消化についての交渉</li>
-          <li>離職票の発行等の退職に伴う法的手続きの一切の交渉</li>
-        </ul>
+      <div class="p-2 text-center bd-highlight bg-yellow text-teal border-bottom border-info"><p class="m-auto h5"><strong>着手金　０円</strong></p></div>
+      <div class="p-2 text-center bd-highlight bg-yellow text-teal"><p class="m-auto h5"><strong>成功報酬　２０%（税別）</strong></p></div>
+      <div class="p-2 text-center bd-highlight bg-yellow text-teal"><p class="m-auto"><strong>但し、最低金額 ２５万円（税別）</strong></p></div>
+      <div class="p-2 bd-highlight bg-info text-white">
+        <p class="pt-2 ml-2 mr-2">弁護士が会社と交渉の上、請求します。訴訟に移行する場合は、ふんたらかんたらふんたらかんたら</p>
       </div>
     </div>
   </div>
@@ -128,7 +128,7 @@
 
 <!--  Footer  -->
 <div class="container-fluid mt-4">
-  <div class="row">
+  <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-comments"></i>
