--- a/index.html
+++ b/index.html
@@ -136,21 +136,21 @@
 
 
 <!--  Footer  -->
-<div class="container-fluid mt-4">
-  <div class="row">
-    <div class="col-sm text-center bg-green text-white">
+<div class="container-fluid">
+  <div class="row mt-3">
+    <div class="col-sm text-center bg-green text-white pt-2">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-comments"></i>
         </span>
         <p class="text-center">チャットで相談</p>
     </div>
-    <div class="col-sm text-center bg-secondary text-white">
+    <div class="col-sm text-center bg-secondary text-white pt-2">
       <span style="font-size: 2em; color: #FF7F00;">
         <i class="fas fa-envelope"></i>
       </span>
       <p class="text-center">メールで相談</p>
     </div>
-    <div class="col-sm text-center bg-blue text-white">
+    <div class="col-sm text-center bg-blue text-white pt-2">
       <span style="font-size: 2em; color: Tomato;">
         <i class="fas fa-phone"></i>
       </span>
