--- a/map.html
+++ b/map.html
@@ -29,7 +29,6 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-
   <!--  Navbar  -->
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -43,8 +42,10 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">
+              HOME
+            <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="service.html"> サービス内容 </a>
@@ -52,28 +53,19 @@
           <li class="nav-item">
             <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="about.html"> 弁護士について </a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              運営事務所
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="about.html">弁護士について</a>
+              <a class="dropdown-item active" href="map.html">地　図</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="fee.html"> 料　金 </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> お問い合わせ </a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#"> 地　図 </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">お問い合わせ</a>
-              <a class="dropdown-item" href="#">退職までのステップ</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
           </li>
         </ul>
     </div>
@@ -118,7 +110,7 @@
 
 <!--  Footer  -->
 <div class="container-fluid">
-  <div class="row">
+  <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-comments"></i>
