--- a/procedure.html
+++ b/procedure.html
@@ -29,7 +29,6 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-
   <!--  Navbar  -->
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -44,7 +43,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">
+              HOME
+            <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="service.html"> サービス内容 </a>
@@ -52,28 +53,19 @@
           <li class="nav-item active">
             <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html"> 弁護士について </a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              運営事務所
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="about.html">弁護士について</a>
+              <a class="dropdown-item" href="map.html">地　図</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="fee.html"> 料　金 </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> お問い合わせ </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="map.html"> 地　図 </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">お問い合わせ</a>
-              <a class="dropdown-item" href="#">退職までのステップ</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
           </li>
         </ul>
     </div>
@@ -100,7 +92,9 @@
 
 <!--  Just Line  -->
 <div class="d-flex">
-  <div class="w-50 justline">Width 50%</div>
+  <div class="w-50 justline">
+    <h1></h1>
+  </div>
 </div>
 <!--  End Just Line  -->
 <!--  Flexbox  -->
@@ -117,7 +111,9 @@
 
 <!--  Just Line  -->
 <div class="d-flex">
-  <div class="w-50 justline">Width 50%</div>
+  <div class="w-50 justline">
+    <h1></h1>
+  </div>
 </div>
 <!--  End Just Line  -->
 <!--  Flexbox  -->
@@ -132,11 +128,13 @@
 </div>
 <!--  Just Line  -->
 <div class="d-flex">
-  <div class="w-50 justline">Width 50%</div>
+  <div class="w-50 justline">
+    <h1></h1>
+  </div>
 </div>
 <!--  End Just Line  -->
 <!--  Flexbox  -->
-<div class="d-flex flex-row bd-highlight justify-content-center">
+<div class="d-flex flex-row justify-content-center">
   <div class="p-2 bg-teal text-white">
     <p class="h1 p-3 text-white">4</p>
   </div>
@@ -152,7 +150,7 @@
 
 <!--  Footer  -->
 <div class="container-fluid">
-  <div class="row">
+  <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-comments"></i>
