--- a/procedure.html
+++ b/procedure.html
@@ -47,9 +47,6 @@
               HOME
             <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="service.html"> サービス内容 </a>
-          </li>
           <li class="nav-item active">
             <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
           </li>
@@ -65,7 +62,7 @@
             <a class="nav-link" href="fee.html"> 料　金 </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> お問い合わせ </a>
+            <a class="nav-link" href="payment.html"> お支払い方法 </a>
           </li>
         </ul>
     </div>
@@ -83,7 +80,7 @@
   <div class="p-2 bg-teal text-white">
     <p class="h1 p-3 text-white">1</p>
   </div>
-  <div class="w-50 p-2 procedure-box bg-teal">
+  <div class="w-75 p-2 procedure-box bg-teal">
     <p class="h4 p-3 bg-yellow text-teal"><strong>相　談</strong></p>
     <p class="p-3 bg-info text-white">メール・チャット・お電話でご相談ください。手続きの詳細についてもご説明いたします。</p>
 
@@ -102,9 +99,11 @@
   <div class="p-2 bg-teal text-white">
     <p class="h1 p-3 text-white">2</p>
   </div>
-  <div class="w-50 p-2 procedure-box bg-teal">
+  <div class="w-75 p-2 procedure-box bg-teal">
     <p class="h4 p-3 bg-yellow text-teal"><strong>契　約</strong></p>
-    <p class="p-3 bg-info text-white">ご本人確認のため、免許証等身分証明書の写真を送信してください。契約は、郵送の他、スマホでもできます（クラウドサイン）。</p>
+    <div class="p-3 bg-info text-white">
+    <p class="">面談の必要はありません。ご本人確認のため、免許証等身分証明書の写真を送信してください。契約は、郵送の他、スマホでもできます。　詳しくはこちら　＞</p>
+  </div>
 
   </div>
 </div>
@@ -121,7 +120,7 @@
   <div class="p-2 bg-teal text-white">
     <p class="h1 p-3">3</p>
   </div>
-  <div class="w-50 p-2 text-white procedure-box bg-teal">
+  <div class="w-75 p-2 text-white procedure-box bg-teal">
     <p class="h4 p-3 bg-yellow text-teal"><strong>お支払い</strong></p>
     <p class="p-3 bg-info text-white">銀行振込・Paypal・クレジットカードでのお支払いができます。</p>
   </div>
@@ -138,7 +137,7 @@
   <div class="p-2 bg-teal text-white">
     <p class="h1 p-3 text-white">4</p>
   </div>
-  <div class="w-50 p-2 procedure-box bg-teal">
+  <div class="w-75 p-2 procedure-box bg-teal">
     <p class="h4 p-3 bg-yellow text-teal"><strong>退職代行</strong></p>
     <p class="p-3 bg-info text-white">弁護士が会社と交渉し、退職の手続きを進めます。あなたが会社とやりとりする必要はありません。</p>
 
@@ -149,28 +148,46 @@
 
 
 <!--  Footer  -->
-<div class="container-fluid">
+<div class="container-fluid mt-4">
   <div class="row mt-3">
-    <div class="col-sm text-center bg-green text-white">
+    <div class="col-sm text-center bg-green text-white a-white">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-comments"></i>
         </span>
         <p class="text-center">チャットで相談</p>
     </div>
-    <div class="col-sm text-center bg-secondary text-white">
-      <span style="font-size: 2em; color: #FF7F00;">
-        <i class="fas fa-envelope"></i>
-      </span>
-      <p class="text-center">メールで相談</p>
+    <div class="col-sm text-center bg-secondary text-white a-white">
+      <a href="mailto:info@katayama-law.jp">
+        <span style="font-size: 2em; color: #FF7F00;">
+          <i class="fas fa-envelope"></i>
+        </span>
+        <p class="text-center">メールで相談</p>
+      </a>
     </div>
-    <div class="col-sm text-center bg-blue text-white">
-      <span style="font-size: 2em; color: Tomato;">
-        <i class="fas fa-phone"></i>
-      </span>
-      <p class="text-center">電話で相談</p>
+    <div class="col-sm text-center bg-blue text-white a-white">
+      <a href="tel:05031880970">
+        <span style="font-size: 2em; color: Tomato;">
+          <i class="fas fa-phone"></i>
+        </span>
+        <p class="text-center">電話で相談</a></p>
+      </a>
     </div>
   </div>
 </div>
+<!--  事務所情報  -->
+<footer class="footer">
+  <div class="container">
+    <address class="text-center m-4">
+      <strong>片山ひでのり法律事務所</strong><br>
+      <strong>弁護士　片山栄範</strong><br>
+      静岡県弁護士会所属　登録番号４０４５９<br>
+      〒422-8067　静岡市駿河区南町１３−３ ＴＫビル４階<br>
+      <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05031880970');" href="tel:05031880970"> 050-3188-0970 </a><br>
+      </span><a href="mailto:info@katayama-law.jp">info@katayama-law.jp</a>
+    </address>
+  </div>
+</footer>
+
 
 
 
