--- a/about.html
+++ b/about.html
@@ -49,9 +49,6 @@
             <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="service.html"> サービス内容 </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
           </li>
           <li class="nav-item dropdown">
@@ -66,7 +63,7 @@
             <a class="nav-link" href="fee.html"> 料　金 </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> お問い合わせ </a>
+            <a class="nav-link" href="payment.html"> お支払い方法 </a>
           </li>
         </ul>
     </div>
@@ -116,28 +113,46 @@
 
 
 <!--  Footer  -->
-<div class="container-fluid">
+<div class="container-fluid mt-4">
   <div class="row mt-3">
-    <div class="col-sm text-center bg-green text-white">
+    <div class="col-sm text-center bg-green text-white a-white">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-comments"></i>
         </span>
         <p class="text-center">チャットで相談</p>
     </div>
-    <div class="col-sm text-center bg-secondary text-white">
-      <span style="font-size: 2em; color: #FF7F00;">
-        <i class="fas fa-envelope"></i>
-      </span>
-      <p class="text-center">メールで相談</p>
+    <div class="col-sm text-center bg-secondary text-white a-white">
+      <a href="mailto:info@katayama-law.jp">
+        <span style="font-size: 2em; color: #FF7F00;">
+          <i class="fas fa-envelope"></i>
+        </span>
+        <p class="text-center">メールで相談</p>
+      </a>
     </div>
-    <div class="col-sm text-center bg-blue text-white">
-      <span style="font-size: 2em; color: Tomato;">
-        <i class="fas fa-phone"></i>
-      </span>
-      <p class="text-center">電話で相談</p>
+    <div class="col-sm text-center bg-blue text-white a-white">
+      <a href="tel:05031880970">
+        <span style="font-size: 2em; color: Tomato;">
+          <i class="fas fa-phone"></i>
+        </span>
+        <p class="text-center">電話で相談</a></p>
+      </a>
     </div>
   </div>
 </div>
+<!--  事務所情報  -->
+<footer class="footer">
+  <div class="container">
+    <address class="text-center m-4">
+      <strong>片山ひでのり法律事務所</strong><br>
+      <strong>弁護士　片山栄範</strong><br>
+      静岡県弁護士会所属　登録番号４０４５９<br>
+      〒422-8067　静岡市駿河区南町１３−３ ＴＫビル４階<br>
+      <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05031880970');" href="tel:05031880970"> 050-3188-0970 </a><br>
+      </span><a href="mailto:info@katayama-law.jp">info@katayama-law.jp</a>
+    </address>
+  </div>
+</footer>
+
 
 
 
