--- a/payment.html
+++ b/payment.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>map</title>
+  <title>決済方法</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -29,6 +29,7 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
+
   <!--  Navbar  -->
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -56,9 +57,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="about.html">弁護士について</a>
-              <a class="dropdown-item active" href="map.html">地　図</a>
+              <a class="dropdown-item" href="map.html">地　図</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="fee.html"> 料　金 </a>
           </li>
           <li class="nav-item">
@@ -69,69 +70,56 @@
   </nav>
 </div>
 <!--  END Navbar  -->
-<!--  Contents  -->
 
-<div class="container-fluid">
-  <h1 class="text-center text-white bg-green   p-5 border-bottom mb-5">片山ひでのり法律事務所</h1>
+<div class="container">
+<!--  Test PayPal  -->
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="P84NCNWJ8GEGG">
+<input type="image" src="https://www.paypalobjects.com/ja_JP/JP/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - オンラインでより安全・簡単にお支払い">
+<img alt="" border="0" src="https://www.paypalobjects.com/ja_JP/i/scr/pixel.gif" width="1" height="1">
+</form>
+<!--  End Test PayPal  -->
 </div>
 
-<!--  Map  -->
-    <div class="container google-map mt-3 mb-3">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.454017775437!2d138.3885706152393!3d34.970290780366135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601a49fa675ccc01%3A0x17bd9dfe06953dae!2z54mH5bGx44Gy44Gn44Gu44KK5rOV5b6L5LqL5YuZ5omA!5e0!3m2!1sja!2sjp!4v1532060667069" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+
+
+<!--  Content  -->
+<div class="container-fluid bg-green">
+  <h1 class="text-center text-white p-5 mb-5">お支払い方法</h1>
+</div>
+
+
+
+<!--  Footer  -->
+<div class="container-fluid mt-4">
+  <div class="row mt-3">
+    <div class="col-sm text-center bg-green text-white a-white">
+        <span style="font-size: 2em; color: #FF7F00;">
+          <i class="fas fa-comments"></i>
+        </span>
+        <p class="text-center">チャットで相談</p>
     </div>
-
-<!--  Adress  -->
-
-    <div class="container mb-5">
-      <h2 class="text-green h3"><strong>住所</strong></h2>
-      <p>〒422-8067</p>
-      <p>静岡市駿河区南町１３−３　ＴＫビル４階</p>
-      <p>片山ひでのり法律事務所</p>
-      <p><strong>電話：<a onclick="return gtag_report_conversion('tel:05031886226');" href="tel:05031886226">０５０−３１８８−６２２６</a></strong></p>
-      <p><strong>FAX：０５０−３４８８−７２９５</strong></p>
+    <div class="col-sm text-center bg-secondary text-white a-white">
+      <a href="mailto:info@katayama-law.jp">
+        <span style="font-size: 2em; color: #FF7F00;">
+          <i class="fas fa-envelope"></i>
+        </span>
+        <p class="text-center">メールで相談</p>
+      </a>
     </div>
-    <div class="container mb-5">
-      <h2 class="text-green h3"><strong>営業時間</strong></h2>
-      <p><strong>平日：</strong>午前１０時から午後７時まで</p>
-      <p><strong>土曜日（隔週）：</strong>午前１０時から午後６時まで</p>
+    <div class="col-sm text-center bg-blue text-white a-white">
+      <a href="tel:05031880970">
+        <span style="font-size: 2em; color: Tomato;">
+          <i class="fas fa-phone"></i>
+        </span>
+        <p class="text-center">電話で相談</a></p>
+      </a>
     </div>
-    <div class="container mb-5">
-      <h2 class="text-green h3"><strong>アクセス</strong></h2>
-      <p>静岡駅南口から徒歩２分。</p>
-      <p>静岡駅南口を出て、駅を背にして、石田街道を、南に向かって進みます。右手に静岡銀行、左手にセブンイレブンのある交差点をセブンイレブンの方に渡ります。セブンイレブンのビルの左隣（東隣）のＴＫビルの４階です。</p>
-    </div>
-
-
-
-
-
-    <!--  Footer  -->
-    <div class="container-fluid mt-4">
-      <div class="row mt-3">
-        <div class="col-sm text-center bg-green text-white a-white">
-            <span style="font-size: 2em; color: #FF7F00;">
-              <i class="fas fa-comments"></i>
-            </span>
-            <p class="text-center">チャットで相談</p>
-        </div>
-        <div class="col-sm text-center bg-secondary text-white a-white">
-          <a href="mailto:info@katayama-law.jp">
-            <span style="font-size: 2em; color: #FF7F00;">
-              <i class="fas fa-envelope"></i>
-            </span>
-            <p class="text-center">メールで相談</p>
-          </a>
-        </div>
-        <div class="col-sm text-center bg-blue text-white a-white">
-          <a href="tel:05031880970">
-            <span style="font-size: 2em; color: Tomato;">
-              <i class="fas fa-phone"></i>
-            </span>
-            <p class="text-center">電話で相談</a></p>
-          </a>
-        </div>
-      </div>
-    </div>
+  </div>
+</div>
 <!--  事務所情報  -->
 <footer class="footer">
   <div class="container">
